* Change fuse.ajax.Updater `insertion` option to `updateBy`. [jddalton]
  Note: Backwards compatibility warning.

* Make script injection via fuse.dom.Element modification methods execute synchronously. [jddalton]

* Add fuse.dom.Element methods. [jddalton]
  - Add appendChildTo
  - Add prependChildTo
  - Add appendSiblingTo
  - Add prependSiblingTo

* Rename fuse.dom.Element methods. [FuseJS LH #73] [jddalton]
  - Rename append to appendChild
  - Rename prepend to prependChild
  - Rename insertAfter to appendSibling
  - Rename insertBefore to prependSibling

* Fix fuse.Fusebox regression with Firefox 1.5 and Safari and cleanup. [jddalton]

* Simplify the private from() function in Fusebox. [jddalton]

* Reduce the prototype chain method lookup by one for the __proto__ fork of Fusebox. [jddalton]

* Allow fuse.Array constructor to throw errors if its passed an invalid length. [jddalton, kangax]

* Remove method wrapping for fuse.Array#sort in the __proto__ fork of Fusebox. [jddalton]

* Reduce the use of strict === in favor of loose ==. [Dmitry Baranovskiy, jddalton]

* Rename private `global` variable to `window` so selector engine adapters can be used outside of the primary closure. [jddalton]

* Avoid an extra fromElement() call in the fast lane of fuse.Event#findElement. [jddalton]

* Add fuse.run() global eval solution, rename fuse.String#evalScripts to fuse.String#runScripts, and make runScripts() callback arguments mimic ES5 callbacks. [FuseJS LH #59] [jddalton]

* Remove fuse.RegExp#match alias of fuse.RegExp#test. [jddalton]
  Note: Backwards compatibility warning.

* Rename String methods and move HTML related String methods to html.js. [jddalton, Joe Gornick]
  - Rename fuse.String#times to fuse.String#repeat
  - Rename fuse.String#blank to fuse.String#isBlank
  - Rename fuse.String#empty to fuse.String#isEmpty

* Ensure `reStrict`, used in Fusebox, detects the strict mode directive correctly. [jddalton, kangax, Kit Goncharov]
